Add COLON dataset loading functionality and update .gitignore
- Introduced `load_colon_csv` function in `load_datasets.py` to load the COLON dataset from a labeled CSV file, including data preprocessing steps.
- Updated `run_experiments.py` to include the new COLON dataset loader in the available datasets.
- Enhanced `.gitignore` to exclude compiled Python files in the `__pycache__` directory, improving repository cleanliness.

--- a/.gitignore
+++ b/.gitignore
@@ -2528,3 +2528,7 @@ datasets/gt_db/gt_db/s50/12.jpg
 datasets/gt_db/gt_db/s50/13.jpg
 datasets/gt_db/gt_db/s50/14.jpg
 datasets/gt_db/gt_db/s50/15.jpg
+__pycache__/baseline_algorithms.cpython-313.pyc
+__pycache__/generate_toy_datasets.cpython-313.pyc
+__pycache__/load_datasets.cpython-313.pyc
+__pycache__/rurr_implementation.cpython-313.pyc
